# spin-timer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Examples/Blink_with_Timer/: Blink_with_Timer.ino
Examples/DoubleStrobeBlink_with_Timer/: DoubleStrobeBlink_with_Timer.ino
Examples/SimpleCounter/: CMakeLists.txt  main.cpp
Examples/SimpleCounter/include/: MySpinTimerAction.h
Examples/SimpleCounter/src/: MySpinTimerAction.cpp  main.cpp
Examples/UptimeInfoAdapter/STM32Cube/: STM32UptimeInfoAdapter.h
cmake/: Documentation.cmake
doc/: Doxyfile.in
doc/html/: _spin_timer_8cpp.html  _spin_timer_8h.html  _spin_timer_8h.js  _spin_timer_8h_source.html  _spin_timer_context_8cpp.html  _spin_timer_context_8h.html  _spin_timer_context_8h_source.html  _uptime_info_8cpp.html  _uptime_info_8h.html  _uptime_info_8h_source.html  annotated.html  annotated_dup.js  class_spin_timer-members.html  class_spin_timer.html  class_spin_timer.js  class_spin_timer_context-members.html  class_spin_timer_context.html  class_spin_timer_context.js  class_uptime_info-members.html  class_uptime_info.html  class_uptime_info.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  keywords_8txt.html  menudata.js  navtreedata.js  navtreeindex0.js
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_0.js  searchdata.js
include/: ISpinTimerAction.h  IUptimeInfoPlatform.h  SpinTimer.h  SpinTimerContext.h  UptimeInfo.h
include/platform/: UptimeInfoArduino.h  UptimeInfoChrono.h  UptimeInfoPosix.h  UptimeInfoSTM32.h  UptimeInfoWin32.h
src/: SpinTimer.cpp  SpinTimerContext.cpp  UptimeInfo.cpp
src/platform/: UptimeInfoArduino.cpp  UptimeInfoChrono.cpp  UptimeInfoPosix.cpp  UptimeInfoSTM32.cpp  UptimeInfoWin32.cpp
